Login dialog version 1

--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -20,6 +20,7 @@
       class="example-icon favorite-icon"
       aria-label="Example icon-button with heart icon"
       [matMenuTriggerFor]="personLog"
+      (click)="openLoginDialog()"
     >
       <mat-icon>person</mat-icon>
     </button>
