feat: update dependencies and refactor user module
- Added @angular-devkit/core and @ngrx/store dependencies to package.json.
- Refactored app-routing.module.ts to load user module instead of customers module.
- Updated app.module.ts to include StoreModule and AuthButtonComponent.
- Modified header.component.html to include AuthButtonComponent for authentication.
- Refactored login.component.html and login.component.ts to use reactive forms.
- Removed customers module and its related components, services, and routing.
- Created user module with user component and routing.
- Implemented AuthButtonComponent for login/logout functionality.
- Added user service for user management.

--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -15,20 +15,16 @@
   <span routerLink="/" class="app-name">My App</span>
 
   <div class="icons-right">
+    <app-auth-button></app-auth-button>
     <button
       mat-icon-button
       class="example-icon favorite-icon"
       aria-label="Example icon-button with heart icon"
-      [matMenuTriggerFor]="personLog"
       (click)="openLoginDialog()"
     >
       <mat-icon>person</mat-icon>
     </button>
-    <mat-menu #personLog="matMenu" xPosition="before">
-      <button mat-menu-item *ngFor="let item of logList">
-        {{ item.function }}
-      </button>
-    </mat-menu>
+
     <button
       mat-icon-button
       class="example-icon"
@@ -48,3 +44,19 @@
     </button>
   </div>
 </mat-toolbar>
+
+<!-- 
+
+staat bij de button
+[matMenuTriggerFor]="personLog"
+
+
+staat onder de button 
+      <mat-menu #personLog="matMenu" xPosition="before">
+      <button mat-menu-item *ngFor="let item of logList">
+        {{ item.function }}
+      </button>
+    </mat-menu>
+  
+  
+  -->
