--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -1,31 +1,37 @@
 <h2 mat-dialog-title>Log In</h2>
 <mat-dialog-content> Please enter your email and password </mat-dialog-content>
-<mat-form-field>
-  <mat-label>Email</mat-label>
-  <input
-    matInput
-    [formControl]="email"
-    (blur)="updateErrorMessage()"
-    required
-    placeholder="Enter your email"
-  />
-  <mat-icon matSuffix>email</mat-icon>
-  <mat-error *ngIf="email.invalid && (email.dirty || email.touched)">
-    <mat-icon>error</mat-icon>
-    <span *ngIf="email.errors?.['required']">Email is required</span>
-    <span *ngIf="email.errors?.['email']">Invalid email format</span>
-  </mat-error>
-</mat-form-field>
-<mat-form-field>
-  <mat-label>Password</mat-label>
-  <mat-icon matSuffix>lock</mat-icon>
-  <input matInput placeholder="Enter your password" type="password" />
-</mat-form-field>
+<form [formGroup]="profileForm">
+  <mat-form-field>
+    <mat-label>Email</mat-label>
+    <input
+      matInput
+      formControlName="email"
+      required
+      placeholder="Enter your email"
+    />
+    <mat-icon matSuffix>email</mat-icon>
+  </mat-form-field>
+  <mat-form-field>
+    <mat-label>Password</mat-label>
+    <mat-icon matSuffix>lock</mat-icon>
+    <input
+      matInput
+      placeholder="Enter your password"
+      type="password"
+      formControlName="password"
+    />
+  </mat-form-field>
+</form>
 
 <mat-dialog-content> No account yet?</mat-dialog-content>
 <mat-dialog-actions>
-  <button mat-button mat-dialog-close (click)="onCancel()">Cancel</button>
-  <button mat-button mat-dialog-close cdkFocusInitial (click)="onLogin()">
-    Submit
+  <button mat-button mat-dialog-close>Cancel</button>
+  <button
+    mat-button
+    mat-dialog-close
+    [disabled]="!profileForm.valid"
+    (click)="Login()"
+  >
+    Login
   </button>
 </mat-dialog-actions>
