--- a/src/app/modules/user/user/user.component.html
+++ b/src/app/modules/user/user/user.component.html
@@ -1,1 +1,12 @@
-<p>user works!</p>
+<mat-card *ngFor="let user of users" class="card">
+  <mat-card-header class="card-header">
+    <mat-card-title>User</mat-card-title>
+    <mat-card-subtitle>Details</mat-card-subtitle>
+  </mat-card-header>
+  <mat-card-content class="card-content">
+    <p>{{ user.name }}</p>
+  </mat-card-content>
+  <mat-card-actions class="card-actions">
+    <button mat-button (click)="FunctionLog(user.id)">Details Log</button>
+  </mat-card-actions>
+</mat-card>
