--- a/src/app/modules/user/userlist/userlist.component.scss
+++ b/src/app/modules/user/userlist/userlist.component.scss
@@ -27,3 +27,13 @@
   gap: 10px;
   margin-top: auto; // ← duwt dit blok naar onderin de kaart
 }
+
+mat-toolbar {
+  padding-top: 20px;
+  justify-content: center;
+  height: auto;
+}
+
+mat-form-field {
+  width: 80%;
+}
