--- a/src/app/modules/products/products-page/products-page.component.html
+++ b/src/app/modules/products/products-page/products-page.component.html
@@ -25,5 +25,8 @@
     <button mat-button (click)="FunctionLog(product)">Detail page</button>
     <button mat-button (click)="FunctionDelete(product)">Delete</button>
     <button mat-button (click)="FunctionUpdate(product)">Update</button>
+    <button mat-icon-button (click)="addToCart(product)">
+      <mat-icon>add_shopping_cart</mat-icon>
+    </button>
   </mat-card-actions>
 </mat-card>
