--- a/src/app/modules/user/updateuserdialog/updateuserdialog.component.html
+++ b/src/app/modules/user/updateuserdialog/updateuserdialog.component.html
@@ -8,7 +8,7 @@
       required
       placeholder="Enter your email"
     />
-    <mat-icon matSuffix>email</mat-icon>
+    <mat-icon matsuffix>email</mat-icon>
   </mat-form-field>
   <mat-form-field>
     <mat-label>Name</mat-label>
@@ -18,7 +18,7 @@
       required
       placeholder="Enter your name"
     />
-    <mat-icon matSuffix>person</mat-icon>
+    <mat-icon matsuffix>person</mat-icon>
   </mat-form-field>
   <mat-form-field>
     <mat-label>address</mat-label>
@@ -28,7 +28,7 @@
       required
       placeholder="Enter your address"
     />
-    <mat-icon matSuffix>home</mat-icon>
+    <mat-icon matsuffix>home</mat-icon>
   </mat-form-field>
   <mat-form-field>
     <mat-label>Phone number</mat-label>
@@ -38,11 +38,11 @@
       required
       placeholder="Enter your phone"
     />
-    <mat-icon matSuffix>phone</mat-icon>
+    <mat-icon matsuffix>phone</mat-icon>
   </mat-form-field>
   <mat-form-field>
     <mat-label>Password</mat-label>
-    <mat-icon matSuffix>lock</mat-icon>
+    <mat-icon matsuffix>lock</mat-icon>
     <input
       matInput
       placeholder="Enter your password"
