--- a/src/app/modules/auth/login/login.component.html
+++ b/src/app/modules/auth/login/login.component.html
@@ -26,7 +26,7 @@
 <mat-dialog-content> </mat-dialog-content>
 <mat-dialog-actions>
   <button mat-button mat-dialog-close (click)="openRegister()">
-    Create Account?
+    Create new Account?
   </button>
   <button mat-button mat-dialog-close>Cancel</button>
   <button
